# aiders_osdk

./: .gitignore  CONTRIBUTING.md  README.md  aiders_osdk_documentation.odt  catkin_make.sh  databaseVerifier.py  platform_disconnect.sh  requirements.txt
Scripts/: clean_ws.sh  fanControl.sh  startSim.sh  stopSim.sh
autostart/: aiders_osdk.service  autostartInstaller.sh  autostartService.sh  install_dependencies.sh
create_plot/: create_plot.py  file_utils.py  plot_utils.py
launch/: AutostartMultimasterOSDK.sh  AutostartMultimasterOSDK_2.sh  getActiveIP.py  setup_ros_env.sh
multisystem/: multisystem.sh
src/dji_sdk/: CMakeLists.txt
src/dji_sdk/include/dji_sdk/: H264Decoder.h  common_type.h  datatypes.h  dji_vehicle_node.h  kalmancustom.hpp  mission_node.h  mobile_device_node.h  payload_device_node.h  pid.hpp  stereo_vision_depth_perception_node.h  vehicle_wrapper.h  waypointV2_node.h
src/dji_sdk/launch/: dji_vehicle_node.launch
src/dji_sdk/msg/: AruQrDetection.msg  ComponentList.msg  ErrorLog.msg  ErrorLogList.msg  RangefinderData.msg
src/dji_sdk/msg/mission/: MissionList.msg
src/dji_sdk/scripts/app_communication/: connectionHandler.py  consert_handler.py  metric_publisher.py
src/dji_sdk/scripts/balora/: balora.py  balora_middlewear_3.py
src/eddi_messages/: CMakeLists.txt
src/kios/: CMakeLists.txt
src/kios/msg/: CrpsRequest.msg  CrpsRequestAckList.msg  DatabasePacketRequest.msg  DroneMovement.msg  GpsInput.msg  MissionDji.msg  TerminalHardware.msg
src/raft/: CMakeLists.txt  package.xml
src/raft/msg/: AppendEntriesRPC.msg  RequestVoteRPC.msg
(+93 files in other folders)
